added parallax and navbar

--- a/main.html
+++ b/main.html
@@ -24,7 +24,33 @@
 
 
 <body>
+     <!-- navbar -->
+     <div class="navbar-fixed">
+            <nav>
+              <div class="nav-wrapper">
+                <a href="#!" class="brand-logo"></a>
+                <ul class="right hide-on-med-and-down">
+                  <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+ <!-- parallax containers/content -->
 
+        <div class="parallax-container">
+                <div class="parallax"><img src="images/start.jpg"></div>
+              </div>
+              <div class="section white">
+                <div class="row container">
+                  <h2>About Me</h2>
+                  <img class="responsive-img" src="/images/waterfall.JPG" alt="">
+                  <p class="grey-text text-darken-3 lighten-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora</p>
+                </div>
+              </div>
+              <div class="parallax-container">
+                <div class="parallax"><img src="images/computer.jpeg"></div>
+              </div>
+ <!-- fab -->
         <div class="fixed-action-btn">
                 <a class="btn-floating btn-large red" id="fab-btn">
                   <i class="large material-icons">account_circle</i>
