--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
     <br>
     <br>
 
-    <img src="images/waterfall.jpg" alt="" class="circle responsive-img">
+    <img src="images/waterfall.JPG" alt="" class="circle responsive-img">
     <br>
     <br>
     <div> 
