--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
      <div class="navbar-fixed">
             <nav class="transparentBG z-depth-0">
               <div class="nav-wrapper">
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                   <li class="active"></li>
                     <li><a class="btn-small #e0e0e0 grey lighten-2" href="#about" id="about-tab">About Me</a></li>
@@ -39,7 +40,19 @@
               </div>
             </nav>
           </div>
- <!--  -->
+          
+
+            <div class="sidenav valign-wrapper" id="mobile-demo">
+                <ul style="width: 100%;">
+              <li><a href="#about" id="about-tab">About Me</a></li>
+              <li><a href="#portfolio" id="portfolio-tab">Portfolio</a></li>
+              <li><a href="#contact" id="contact-tab">Contact</a></li>
+            </ul>
+        </div>
+
+
+  <!--  -->
+
 
 <div class="container" id="topcont">
     <h2 class="center-align">Designer & Front-End Developer</h2>
